# ai-automation-engineer-course

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-CODE  README.md  ROADMAP.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progreso.md
.ai/: INSTRUCCIONES-CORRECTOR.md  README.md
.ai/rubricas/: _PLANTILLA.md
.ai/rubricas/fase-0/: anatomia-de-una-url.md  backup-con-bash.md  capstone-cli-sin-ia.md  commit-msg-hook.md  descomponer-problema-cotidiano.md  disena-tu-sistema-de-estudio.md  disenar-algoritmo-pseudocodigo.md  fundamentos-programacion-inventario.md  fundamentos-programacion-recursion-scope.md  git-modelo-mental.md  http-con-curl.md  index.md  json-con-jq.md  leer-stack-traces.md  notional-machine-parsons.md  notional-machine-trazado.md  pipeline-conteo-logs.md  spec-first-divisor-cuenta.md  trazado-a-mano-bucle.md
.ai/rubricas/fase-1/: bitacora-json.md  capstone-misma-app-dos-lenguajes.md  cliente-api-resiliente.md  cliente-fetch-status.md  excepciones-idiomaticas-python.md  index.md  js-pipeline-inmutable.md  primer-llm-mini-cli.md  python-asincrono-descargas-concurrentes.md  python-asincrono-diagnostico.md  python-basico-intermedio-entornos-modulos.md  python-basico-intermedio-idiomatico.md  python-intermedio-comprehensions-generadores.md  python-intermedio-decorador-context-manager.md  result-discriminated-union-ts.md  tdd-total-propina.md  tests-con-fixtures-parametrize.md  tipar-y-estrechar-typescript.md  tipar-y-pasar-mypy.md  validar-salida-llm-pydantic.md  validar-salida-llm-zod.md
.ai/rubricas/fase-2/: capstone-refactor-tests.md  caracterizar-y-refactorizar-legado.md  cazar-mutantes-sobrevivientes.md  clean-code-dry-kiss-yagni.md  clean-code-refactor-nombres-funciones.md  de-print-a-logging-estructurado.md  depurar-con-stack-trace-y-pdb.md  disenar-dobles-y-contrato.md  dsa-analisis-big-o.md  dsa-dedup-hashmap.md  dsa-stack-parentesis.md  escribir-adr-y-mini-spec.md  flujo-pr-commits-code-review.md  index.md  mockear-llm-extractor.md  patrones-adapter-notificaciones.md  patrones-juicio-cual-patron.md  pbt-repartir-monto.md  piramide-decidir-nivel.md  playwright-presupuesto-e2e.md  playwright-refactor-robusto.md  pytest-suite-envios.md  que-no-testear-y-umbral.md  refactor-ocp-descuentos.md  refactor-precio-con-smells.md  solid-juicio-sobre-abstraccion.md  tdd-dividir-gasto.md  tdd-sumador-de-texto.md  unit-test-vs-eval-frontera.md  vitest-suite-validador.md
.ai/rubricas/fase-3/: anomalias-e-isolation.md  auditoria-owasp-config.md  blindar-fetch-ssrf.md  cache-aside-ttl.md  capstone-api-produccion.md  carrera-stock-locking.md  cazar-n1.md  (+30 more)
.ai/soluciones/: README.md
.claude/skills/: README.md
.github/workflows/: deploy.yml
ejercicios/: README.md
ejercicios/fase-1/capstone-misma-app-dos-lenguajes/python/: pantry.py  pyproject.toml  server.py  test_pantry.py
ejercicios/fase-2/capstone-refactor-tests/: ARQUITECTURA.template.md  README.md  ci.example.yml  despensa.py  ejercicio.yml  pyproject.toml
ejercicios/fase-2/capstone-refactor-tests/docs/adr/: 0001-record-architecture-decisions.md
ejercicios/fase-2/capstone-refactor-tests/tests/: test_caracterizacion.py
ejercicios/fase-2/capstone-refactor-tests/tests/datos/: despensa-ejemplo.json
ejercicios/fase-3/capstone-api-produccion/plantillas/: .env.example  ADR-0001-arquitectura-hexagonal.md  SPEC.md  pyproject.toml
ejercicios/fase-5/instrumentar-call-chain/: README.md  ejercicio.yml  pyproject.toml  servicio.py  telemetria.py  test_observabilidad.py
ejercicios/fase-7/orquestador/: .gitignore  README.md  definitions.py  ejercicio.yml  ingesta.py  pyproject.toml
ejercicios/fase-7/orquestador/tests/: test_ingesta.py
ejercicios/fase-7/saga-pago-durable/: README.md  actividades.py  ejercicio.yml  iniciar.py  pyproject.toml  worker.py  workflow.py
ejercicios/fase-7/saga-pago-durable/tests/: test_saga.py
ejercicios/plantilla-ejercicio/: README.md  solucion.py  test_solucion.py
src/: content.config.ts
src/components/: CheckDominio.astro  Nivel.astro  Quiz.astro  Reto.astro  Solucion.astro
src/styles/: custom.css
(+1467 files in other folders)
