[project]
name = "instrumentar-call-chain"
version = "0.1.0"
description = "Ejercicio 5.10 — instrumentar un call-chain con trazas (OpenTelemetry) y structured logging"
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "structlog>=24",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
